@@ -56,6 +56,12 @@ const getHeaders = ( sortColumn?: string ): DisputesTableHeader[] => [
 		isLeftAligned: true,
 	},
 	{
+		key: 'currency',
+		label: __( 'Currency', 'woocommerce-payments' ),
+		visible: false,
+		required: true,
+	},
+	{
 		key: 'status',
 		label: __( 'Status', 'woocommerce-payments' ),
 		screenReaderLabel: __( 'Status', 'woocommerce-payments' ),
@@ -161,6 +167,10 @@ export const DisputesList = (): JSX.Element => {
 					formatExplicitCurrency( dispute.amount, dispute.currency )
 				),
 			},
+			currency: {
+				value: dispute.currency,
+				display: clickable( dispute.currency ),
+			},
 			status: {
 				value: dispute.status,
 				display: clickable(
@@ -237,30 +247,30 @@ export const DisputesList = (): JSX.Element => {
 
 		const csvRows = rows.map( ( row ) => {
 			return [
-				...row.slice( 0, 2 ),
-				{
-					...row[ 2 ],
-					value: disputeStatusMapping[ row[ 2 ].value ?? '' ].message,
-				},
+				...row.slice( 0, 3 ),
 				{
 					...row[ 3 ],
-					value: formatStringValue(
-						( row[ 3 ].value ?? '' ).toString()
-					),
+					value: disputeStatusMapping[ row[ 3 ].value ?? '' ].message,
 				},
-				...row.slice( 4, 9 ),
 				{
-					...row[ 9 ],
-					value: dateI18n(
-						'Y-m-d',
-						moment( row[ 9 ].value ).toISOString()
+					...row[ 4 ],
+					value: formatStringValue(
+						( row[ 4 ].value ?? '' ).toString()
 					),
 				},
+				...row.slice( 5, 10 ),
 				{
 					...row[ 10 ],
 					value: dateI18n(
-						'Y-m-d / g:iA',
+						'Y-m-d',
 						moment( row[ 10 ].value ).toISOString()
+					),
+				},
+				{
+					...row[ 11 ],
+					value: dateI18n(
+						'Y-m-d / g:iA',
+						moment( row[ 11 ].value ).toISOString()
 					),
 				},
 			];
